--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+#container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 :root {
     --grid-rows: 1;
     --grid-cols: 1;
