--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ html, body {
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 30px);
     grid-template-columns: repeat(var(--grid-cols), 30px);
+    border: 1px solid black;
 }
 
 .grid-square {
