--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@ html, body {
 :root {
     --grid-rows: 1;
     --grid-cols: 1;
+    --grid-square-size: 1px;
 }
 
 #canvas {
     display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 30px);
-    grid-template-columns: repeat(var(--grid-cols), 30px);
+    grid-template-rows: repeat(var(--grid-rows), var(--grid-square-size));
+    grid-template-columns: repeat(var(--grid-cols), var(--grid-square-size));
     border: 1px solid black;
 }
 
