--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
 html, body {
     height: 100%;
     margin: 0;
+    font-family: 'Inconsolata', monospace;
 }
 
 #container {
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    gap: 55px;
+}
+
+header {
+    margin-top: 45px;
+}
+
+#header-text {
+    margin: 15px 0px;
+    font-size: 70px;
 }
 
 :root {
@@ -24,5 +37,5 @@ html, body {
 }
 
 .grid-square {
-    border: 1px solid black;
+    border: 0.1px solid black;
 }
