--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,19 @@ button {
     background-color: rgb(99, 45, 91);
     font-family: inherit;
     font-size: inherit;
-    padding: 10px 50px;
+    padding: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
+    min-width: 200px;
+    width: 75%;
     border: none;
     border-radius: 20px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(77, 34, 70);
+    scale: 1.05;
 }
 
 #content-left, #content-right {
